libbrillo: Generate policy files directly in libpolicy tests
Currently to modify libpolicy tests, we have to regenerate .bin policy
files and check them in to repository to accommodate new test cases.

Set up, sign, encode and persist device policy blobs directly from
the tests.
This makes test setup clearer and more visible. This makes it easier to
add new test cases.

BUG=b:166398868
TEST=cros_run_unit_tests --board=<BOARD> --packages libbrillo

Change-Id: If235198352a2de620dc2ccd97cb3d50359fff75a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5324913
Commit-Queue: Artyom Chen <artyomchen@google.com>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Tested-by: Artyom Chen <artyomchen@google.com>
Reviewed-by: Igor <igorcov@chromium.org>

--- a/libbrillo/BUILD.gn
+++ b/libbrillo/BUILD.gn
@@ -653,6 +653,7 @@ if (use.test) {
   executable("libpolicy_tests") {
     sources = [
       "install_attributes/mock_install_attributes_reader.cc",
+      "policy/tests/crypto_helpers.cc",
       "policy/tests/device_local_account_policy_util_test.cc",
       "policy/tests/device_policy_impl_test.cc",
       "policy/tests/libpolicy_test.cc",
@@ -778,7 +779,10 @@ if (use.fuzzer) {
   }
 
   executable("libbrillo_policy_device_policy_impl_fuzzer") {
-    sources = [ "policy/tests/device_policy_impl_fuzzer.cc" ]
+    sources = [
+      "policy/tests/crypto_helpers.cc",
+      "policy/tests/device_policy_impl_fuzzer.cc",
+    ]
     configs += [ "//common-mk/common_fuzzer:common_fuzzer" ]
     pkg_deps = [ "libchrome" ]
     include_dirs = [ "../libbrillo" ]
