--- a/modemfwd/BUILD.gn
+++ b/modemfwd/BUILD.gn
@@ -81,6 +81,7 @@ static_library("libmodemfw") {
     "modem_tracker.cc",
     "notification_manager.cc",
     "scoped_temp_file.cc",
+    "suspend_checker.cc",
     "upstart_job_controller.cc",
   ]
   configs += [ ":target_defaults" ]
