--- a/login_manager/init/upstart/ui.conf
+++ b/login_manager/init/upstart/ui.conf
@@ -16,10 +16,7 @@ author        "chromium-os-dev@chromium.org"
 # pre-shutdown job for more details.
 # NB: Respawning is now handled by ui-respawn.conf, as the logic is
 # more complex than upstart was designed to handle.
-# The ui-pre-start script sets up trace logging on the drm instance of tracefs.
-# Wait until job tracefs-init is done.
-start on (started boot-services and stopped cgroups and started lockbox-cache
-          and stopped tracefs-init)
+start on started boot-services and stopped cgroups and started lockbox-cache
 stop on starting pre-shutdown
 
 # OK to kill if absolutely needed.
