debugd: Add FbPreprocessor proxy in debugd
Debugd reads a list of WiFi firmware dump files from fbpreprocessord via
FbPreprocessor Proxy to attach with the feedback report.

More info: go/cros-fw-dumps-debugd-dd

BUG=b:291347317
TEST=Build and manually test using collect_fw_dumps helper
     Test info: https://paste.googleplex.com/5990006847438848

Change-Id: Ie572b077c30ab2a3cab552d0ae0182089571be26
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5334215
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Tested-by: Nicolas Norvez <norvez@chromium.org>
Commit-Queue: Nicolas Norvez <norvez@chromium.org>

--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -21,6 +21,7 @@ group("all") {
     ":dev_features_rootfs_verification",
     ":dev_features_ssh",
     ":dev_features_usb_boot",
+    ":fbpreprocessor-proto",
     ":filter_vpd",
     ":folder_size_dump",
     ":generate_logs",
@@ -74,6 +75,12 @@ proto_library("cryptohome-proto") {
     "${proto_in_dir}/key.proto",
     "${proto_in_dir}/rpc.proto",
   ]
+}
+
+proto_library("fbpreprocessor-proto") {
+  proto_in_dir = "${sysroot}/usr/include/chromeos/dbus/fbpreprocessor"
+  proto_out_dir = "include"
+  sources = [ "${proto_in_dir}/fbpreprocessor.proto" ]
 }
 
 proto_library("power_manager-proto") {
@@ -170,6 +177,7 @@ static_library("libdebugd") {
   deps = [
     ":cryptohome-proto",
     ":debugd-adaptors",
+    ":fbpreprocessor-proto",
     ":scheduler_configuration_utils",
   ]
   pkg_deps = [ "re2" ]
