cryptohome: MigrateLegacyFingerprints by auth session.
Fingerprint migration has some specific biod interactaions that
make it not conforming to existing abstraction layers on top
of the biometrics service. We introduce a utility class to enable
AuthSession and later UserDataAuth object direct access to
these fp migration related functionalities.

- MigrateLegacyFingerprints uses the new fp_migration_utility
  to list a list of legacy fp templates and further
  to load a legacy fingerprint template as preparation for
  adding each migrated fp auth factor.

- The new API would loop through a list of biod::LegacyRecord:
  for each record, load the legacy template and add it
  as newly enrolled auth factor.
  4 new private functions are added to form a loop through
  nested callbacks.

- This new API has no re-entryness built-in. We plan to add
  it later.

BUG=b:320540356
TEST=New unit tests that verifies the nested callback loop.

Change-Id: I01287417415a98281479af59b6045ac741837c44
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5271164
Reviewed-by: Howard Yang <hcyang@google.com>
Reviewed-by: John Admanski <jadmanski@chromium.org>
Commit-Queue: Zi Lin <lziest@google.com>
Tested-by: Zi Lin <lziest@google.com>

--- a/cryptohome/libs/BUILD.gn
+++ b/cryptohome/libs/BUILD.gn
@@ -597,6 +597,7 @@ static_library("libcryptohome") {
     "../features.cc",
     "../filesystem_layout.cc",
     "../fingerprint_manager.cc",
+    "../fp_migration/utility.cc",
     "../key_challenge_service_factory_impl.cc",
     "../key_challenge_service_impl.cc",
     "../keyset_management.cc",
