diagnostics: Introduce Network bandwidth routine
BUG=b:320631510
TEST=FEATURES=test emerge-volteer diagnostics
TEST=FEATURES=test emerge-cherry diagnostics
TEST=FEATURES=test emerge-elm diagnostics
TEST=(DUT) cros-health-tool diag network_bandwidth
     (On volteer, cherry and elm)

Change-Id: Ia0760d4455a4fd98877fcb497efa1ed693238249
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5333378
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Commit-Queue: Byron Lee <byronlee@chromium.org>
Tested-by: Byron Lee <byronlee@chromium.org>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/routines/network/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/network/BUILD.gn
@@ -18,6 +18,7 @@ source_set("network") {
     "https_firewall.cc",
     "https_latency.cc",
     "lan_connectivity.cc",
+    "network_bandwidth.cc",
     "signal_strength.cc",
     "video_conferencing.cc",
   ]
@@ -44,6 +45,7 @@ if (use.test) {
       "https_firewall_test.cc",
       "https_latency_test.cc",
       "lan_connectivity_test.cc",
+      "network_bandwidth_test.cc",
       "signal_strength_test.cc",
       "video_conferencing_test.cc",
     ]
