metrics: memd: Use Rust 2021
Use Rust 2021 for later refactoring. The tokio library will be used
which requires Rust edition 2018 or newer.

BUG=b:273672971
TEST=cargo build

Change-Id: I054e23633e5a43d76954a21db70135c256f60186
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5334941
Tested-by: Vovo Yang <vovoy@chromium.org>
Reviewed-by: Miriam Zimmerman <mutexlox@chromium.org>
Commit-Queue: Vovo Yang <vovoy@chromium.org>

--- a/metrics/memd/Cargo.toml
+++ b/metrics/memd/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["The ChromiumOS Authors"]
 build = "build.rs"
 include = ["Cargo.toml", "*.rs", "src/**/*"]
+edition = "2021"
 
 [dependencies]
 chrono = "0.4.2"
