--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -347,6 +347,8 @@ static_library("libshill") {
     "network/network.cc",
     "network/network_monitor.cc",
     "network/slaac_controller.cc",
+    "network/tc_process.cc",
+    "network/throttler.cc",
     "network/trial_scheduler.cc",
     "network/validation_log.cc",
     "portal_detector.cc",
@@ -374,11 +376,9 @@ static_library("libshill") {
     "supplicant/supplicant_eap_state_handler.cc",
     "supplicant/supplicant_manager.cc",
     "supplicant/wpa_supplicant.cc",
-    "tc_process.cc",
     "technology.cc",
     "tethering.cc",
     "tethering_manager.cc",
-    "throttler.cc",
     "time.cc",
     "upstart/upstart.cc",
     "virtual_device.cc",
@@ -798,8 +798,6 @@ if (use.test) {
       "mock_profile.cc",
       "mock_resolver.cc",
       "mock_service.cc",
-      "mock_tc_process.cc",
-      "mock_throttler.cc",
       "mock_time.cc",
       "mock_virtual_device.cc",
       "network/capport_proxy_test.cc",
@@ -820,10 +818,14 @@ if (use.test) {
       "network/mock_network.cc",
       "network/mock_network_monitor.cc",
       "network/mock_slaac_controller.cc",
+      "network/mock_tc_process.cc",
+      "network/mock_throttler.cc",
       "network/mock_validation_log.cc",
       "network/network_monitor_test.cc",
       "network/network_test.cc",
       "network/slaac_controller_test.cc",
+      "network/tc_process_test.cc",
+      "network/throttler_test.cc",
       "network/trial_scheduler_test.cc",
       "network/validation_log_test.cc",
       "portal_detector_test.cc",
@@ -857,12 +859,10 @@ if (use.test) {
       "supplicant/supplicant_eap_state_handler_test.cc",
       "supplicant/supplicant_manager_test.cc",
       "supplicant/wpa_supplicant_test.cc",
-      "tc_process_test.cc",
       "technology_test.cc",
       "testing.cc",
       "testrunner.cc",
       "tethering_manager_test.cc",
-      "throttler_test.cc",
       "time_test.cc",
       "upstart/mock_upstart.cc",
       "upstart/mock_upstart_proxy.cc",
