crosh: enable dbus stdfd feature
The dbus crate allows the use of the standard OwnedFd type now, which
can be converted from a File without the use of unsafe {}.

BUG=b:327639547
TEST=FEATURES=test emerge-hatch crosh

Change-Id: I957cee587b7d7125ca924ea7f1db744db5dd7fb7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5336161
Tested-by: Daniel Verkamp <dverkamp@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>
Commit-Queue: Daniel Verkamp <dverkamp@chromium.org>

--- a/crosh/Cargo.toml
+++ b/crosh/Cargo.toml
@@ -17,7 +17,7 @@ name = "crosh"
 [dependencies]
 bitflags = "1.3.2"
 chrono = "0.4"
-dbus = "0.9"
+dbus = { version = "0.9.7", features = ["stdfd"] }
 getopts = "0.2"
 libc = "0.2.44"
 libchromeos = { path = "../libchromeos-rs", features = ['chromeos-module'] } # provided by ebuild
