--- a/vm_tools/vmc/Cargo.toml
+++ b/vm_tools/vmc/Cargo.toml
@@ -17,7 +17,7 @@ overflow-checks = true
 [workspace]
 
 [dependencies]
-dbus = "0.9"
+dbus = { version = "0.9.7", features = ["stdfd"] }
 getopts = "0.2"
 libc = "0.2.44"
 libchromeos = { path = "../../libchromeos-rs" } # provided by ebuild
