vm_tools: chunnel: enable dbus stdfd feature
Replace unsafe code with safe From conversion.

BUG=b:327639547
TEST=FEATURES=test emerge-tatl chromeos-base/chunnel

Change-Id: I2eff6ad65812bf51c70cad3b84b6651c8621f341
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5336163
Tested-by: Daniel Verkamp <dverkamp@chromium.org>
Reviewed-by: Dmitry Torokhov <dtor@chromium.org>
Commit-Queue: Daniel Verkamp <dverkamp@chromium.org>

--- a/vm_tools/chunnel/Cargo.toml
+++ b/vm_tools/chunnel/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["The ChromiumOS Authors"]
 edition = "2018"
 
 [dependencies]
-dbus = "0.9"
+dbus = { version = "0.9.7", features = ["stdfd"] }
 dbus-tree = "0.9"
 getopts = "0.2"
 libc = "0.2"
