diagnostics: Merge pkg_configs in routines/BUILD.gn
The target `common_pkg_deps` was introduced in CL:2210433 to simplify
configs shared by multiple targets. It does not need to be a separated
config now since there is only one target using it.

BUG=none
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I5689d64ce91b62ebc7818e8bf385ab66f5ddaca6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5339160
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>

--- a/diagnostics/cros_healthd/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/BUILD.gn
@@ -4,17 +4,12 @@
 
 import("//common-mk/pkg_config.gni")
 
-pkg_config("common_pkg_deps") {
-  pkg_deps = [
-    "libbrillo",
-    "libchrome",
-    "libdebugd-client",
-  ]
-}
-
 pkg_config("libdiag_routine_pkg_deps") {
   pkg_deps = [
     "iioservice_ipc",
+    "libbrillo",
+    "libchrome",
+    "libdebugd-client",
     "libmojo",
     "libspaced",
     "mojo_service_manager",
@@ -24,10 +19,7 @@ pkg_config("libdiag_routine_pkg_deps") {
 }
 
 source_set("libdiag_routine") {
-  configs += [
-    ":common_pkg_deps",
-    ":libdiag_routine_pkg_deps",
-  ]
+  configs += [ ":libdiag_routine_pkg_deps" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
