libhwsec: Add pinweaver_manager_client tool
This CL adds a "pinweaver_manager_client" tool that is  meant to be used
in integration tests to peform pinweaver operations and verify
pinweaver's functionality. This CL add support to pinweaver
insert/check/remove/reset credential operations. Biometrics related
operations aren't added now since it is not testable on standard tast
tests.

BUG=b:288988855
TEST=use pinweaver_manager_client to successfully
     add/auth/reset/remove labels

Change-Id: Id09e793b1dac906a9921ae404ba48798c04147df
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4957003
Reviewed-by: Howard Yang <hcyang@google.com>
Reviewed-by: Yi Chou <yich@google.com>
Commit-Queue: Sam Chen <chensa@google.com>
Tested-by: Sam Chen <chensa@google.com>

--- a/libhwsec/BUILD.gn
+++ b/libhwsec/BUILD.gn
@@ -14,6 +14,7 @@ group("all") {
     ":install_headers_structures",
     ":libhwsec",
     ":libhwsec_client",
+    ":pinweaver_manager_client",
   ]
   if (use.test) {
     deps += [
@@ -404,6 +405,14 @@ shared_library("libhwsec") {
 
 executable("libhwsec_client") {
   sources = [ "client/main.cc" ]
+  configs += [ ":target_defaults" ]
+  install_path = "bin"
+
+  deps = [ ":libhwsec" ]
+}
+
+executable("pinweaver_manager_client") {
+  sources = [ "client/pinweaver_manager.cc" ]
   configs += [ ":target_defaults" ]
   install_path = "bin"
 
