libcrossystem: Install test library in /usr/local/lib
Although libcrossytem-test is intended for unit tests, it is used by
test tool |cryptohome-tpm-live-test| on DUT.
Its use derives from libstorage/platform exposing crossystem internal
object at crrev.com/c/5319721.

BUG=b:327983076, b:232566569
TEST=CQ, check tast test CryptohomeTPMLiveTests passes.

Fixes: commit 3b55b54ab ("libstorage: platform: Allow passing dependencies")
Change-Id: Ia13f0dc9b8edd8d6877eab41b496dc4f883adc8f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5341269
Auto-Submit: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Commit-Queue: Hidehiko Abe <hidehiko@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>

--- a/libcrossystem/BUILD.gn
+++ b/libcrossystem/BUILD.gn
@@ -60,7 +60,7 @@ shared_library("libcrossystem-test") {
   if (use.cros_host) {
     install_path = "lib"
   } else {
-    install_path = "/build/lib"
+    install_path = "/usr/local/lib"
   }
 }
 
