fbpreprocessor: fake SessionStateManager for unit tests
Add FakeSessionStateManager that will implement
SessionStateManagerInterface in the context of unit tests.

BUG=b:309365285
TEST=FEATURES=test emerge-${BOARD} fbpreprocessord

Change-Id: Ifaef9ecb14a78c2c804789be8818679fb0764911
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5347098
Commit-Queue: Nicolas Norvez <norvez@chromium.org>
Reviewed-by: Yichen Yu <yichenyu@chromium.org>
Tested-by: Nicolas Norvez <norvez@chromium.org>

--- a/fbpreprocessor/BUILD.gn
+++ b/fbpreprocessor/BUILD.gn
@@ -97,6 +97,7 @@ if (use.test) {
   executable("fbpreprocessord_test_runner") {
     sources = [
       "fake_manager.cc",
+      "fake_session_state_manager.cc",
       "firmware_dump_test.cc",
     ]
     configs += [
