Revert "sepolicy, init: Move debugfs, tracefs policy to genfscon"
This reverts commit 51f2a84ecbcb845dba5d4362ae0b7277505bb502.

Reason for revert: breaks selinux-policy unit test

Original change's description:
> sepolicy, init: Move debugfs, tracefs policy to genfscon
>
> And delete {debugfs,tracefs}-init jobs, which were expensive.
>
> As of kernel 4.11, genfscon supports tracefs (and debugfs), so we can
> use it in place of user-space xattr setting (i.e., restorecon). This has
> the advantage of being a lot cheaper, as we don't have to do all the
> work up front during boot.
>
> Using genfscon has some difficulties along the way though, because
> Android policies are conflicting a bit with our definitions. In
> particular, tracefs root (/) and many other files in tracefs get a type
> of 'debugfs_tracing_debug' in the Android policy. So I add this type
> into the main ChromeOS policy too, to help reconcile.
>
> The following getfilecon diffs occur before->after because the "after"
> result is specified in Android policies, which conflict with our
> previous recursive /sys/kernel/tracing(/.*)? and /sys/kernel/debug(/.*)?
> policy, that we'd re-apply on top via restorecon. I believe we don't
> actually care about their result in many cases, and for cases where we
> might (featured), I've extended the featured policy to allow for either:
>
>   /sys/kernel/tracing, /sys/kernel/debug/tracing (and many
>     sub-directories/files): debugfs_tracing -> debugfs_tracing_debug
>
>   /sys/kernel/debug/mmc0: debugfs -> debugfs_mmc
>
>   /sys/kernel/debug/wakeup_sources: debugfs -> debugfs_wakeup_sources
>
>   /sys/kernel/debug/tracing: debugfs_tracing -> debugfs_tracing_debug
>
> Some other diffs:
>
>   /sys/kernel/debug/mali0/ctx/xxxx -> these numbers change from boot to
>     boot, as they are kernel runtime details
>
>   /sys/kernel/tracing/trace_marker_raw: debugfs_tracing ->
>     debugfs_trace_marker -- I believe this is because genfscon treats
>     the /trace_marker r

--- a/login_manager/init/upstart/ui.conf
+++ b/login_manager/init/upstart/ui.conf
@@ -16,7 +16,10 @@ author        "chromium-os-dev@chromium.org"
 # pre-shutdown job for more details.
 # NB: Respawning is now handled by ui-respawn.conf, as the logic is
 # more complex than upstart was designed to handle.
-start on started boot-services and stopped cgroups and started lockbox-cache
+# The ui-pre-start script sets up trace logging on the drm instance of tracefs.
+# Wait until job tracefs-init is done.
+start on (started boot-services and stopped cgroups and started lockbox-cache
+          and stopped tracefs-init)
 stop on starting pre-shutdown
 
 # OK to kill if absolutely needed.
