vm_tools: vmc: use get_user_id_hash() from libchromeos
Don't reinvent the wheel.

BUG=None
TEST=FEATURES=test emerge-hatch crostini_client
TEST=run vmc from crosh and ssh root shell

Change-Id: I3df1f006c2be5764aa1deb9f20b13124eda1f167
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5346623
Tested-by: Daniel Verkamp <dverkamp@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Daniel Verkamp <dverkamp@chromium.org>

--- a/vm_tools/vmc/Cargo.toml
+++ b/vm_tools/vmc/Cargo.toml
@@ -20,7 +20,7 @@ overflow-checks = true
 dbus = { version = "0.9.7", features = ["stdfd"] }
 getopts = "0.2"
 libc = "0.2.44"
-libchromeos = { path = "../../libchromeos-rs" } # provided by ebuild
+libchromeos = { path = "../../libchromeos-rs", features = ["chromeos-module"] } # provided by ebuild
 protobuf = "3.2"
 system_api = { path = "../../system_api" } # provided by ebuild
 
