runtime_probe: Add RE matcher
Add RE matcher to match probe result by regular expression.

BUG=b:319392764
TEST=unit test

Change-Id: I97a9e9ab843371e2b3e3ee1028bb80cd3eec685b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5338976
Reviewed-by: Allen Shih <allenshihmc@chromium.org>
Commit-Queue: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Chung-sheng Wu <chungsheng@google.com>

--- a/runtime_probe/matchers/BUILD.gn
+++ b/runtime_probe/matchers/BUILD.gn
@@ -16,6 +16,7 @@ source_set("matchers") {
     "field_matcher.cc",
     "logical_matcher.cc",
     "matcher.cc",
+    "re_matcher.cc",
   ]
   configs += [ ":target_defaults" ]
 }
