verity: Support various modes
.. so we can start verifying payloads/images.

This is also structured so future mode additions/removals are
simplified.

BUG=b:322180104
TEST=cros_workon_make -b$B --test verity

Change-Id: I3cf775e6ad354ce918441af921b7a331d941272e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5347382
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Tested-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>

--- a/verity/BUILD.gn
+++ b/verity/BUILD.gn
@@ -39,6 +39,7 @@ shared_library("libdm-bht") {
     "dm_verity_table.cc",
     "file_hasher.cc",
     "hasher.cc",
+    "verity_mode.cc",
   ]
   install_path = "lib"
   configs += [ ":target_defaults" ]
@@ -62,6 +63,7 @@ install_config("install_headers") {
     "dm-bht.h",
     "dm_verity_table.h",
     "file_hasher.h",
+    "verity_mode.h",
   ]
   install_path = "/usr/include/verity"
 }
@@ -87,9 +89,7 @@ if (use.test) {
       "//common-mk:test",
       ":target_defaults",
     ]
-    deps = [
-      "//common-mk/testrunner",
-    ]
+    deps = [ "//common-mk/testrunner" ]
     run_test = true
   }
 
@@ -98,6 +98,7 @@ if (use.test) {
       "dm-bht_test.cc",
       "dm_verity_table_test.cc",
       "file_hasher_test.cc",
+      "verity_mode_test.cc",
     ]
     configs += [
       "//common-mk:test",
