diagnostics: Refactor BUILD.gn under minijail
BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ie38ca9721edf42edfe63372a6acafa0526c78a78
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5348897
Tested-by: Byron Lee <byronlee@chromium.org>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -49,9 +49,9 @@ executable("cros_healthd") {
   assert_no_deps = [ "//diagnostics/cros_healthd/delegate/*" ]
   deps = [
     ":libcros_healthd",
-    "executor:libcros_healthd_executor",
-    "minijail:libcros_healthd_minijail",
-    "system:libcros_healthd_system",
+    "//diagnostics/cros_healthd/executor:libcros_healthd_executor",
+    "//diagnostics/cros_healthd/minijail",
+    "//diagnostics/cros_healthd/system:libcros_healthd_system",
   ]
 }
 
