runtime_probe: Enable ec_component sandbox
Add all necessary config to allow runtime probe execute ec component
probe function.

BUG=b:322119535
TEST=run on zork and corsola

Change-Id: Ie6489413c1e4cf620744aa38079766cb87284562
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5347528
Commit-Queue: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Chung-sheng Wu <chungsheng@google.com>
Reviewed-by: Yu-An Wang <wyuang@google.com>

--- a/runtime_probe/sandbox/BUILD.gn
+++ b/runtime_probe/sandbox/BUILD.gn
@@ -46,6 +46,9 @@ install_seccomp_policy("install_sandbox_seccomp") {
       "${_arch}/wireless_network-seccomp.policy",
     ]
   }
+  if (_arch == "amd64" || _arch == "arm64") {
+    sources += [ "${_arch}/ec_component-seccomp.policy" ]
+  }
   install_path = "/etc/runtime_probe/sandbox"
 }
 
