--- a/diagnostics/BUILD.gn
+++ b/diagnostics/BUILD.gn
@@ -9,7 +9,7 @@ group("all") {
     ":install_tmpfiles_config",
     "//diagnostics/cros_health_tool:cros-health-tool",
     "//diagnostics/cros_healthd:cros_healthd",
-    "//diagnostics/cros_healthd/delegate:executor-delegate",
+    "//diagnostics/cros_healthd/delegate",
     "//diagnostics/cros_healthd/seccomp",
     "//diagnostics/dbus_bindings",
     "//diagnostics/mojom",
