--- a/diagnostics/cros_healthd/delegate/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/BUILD.gn
@@ -2,31 +2,36 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-pkg_config("libexecutor_delegate_pkg_deps") {
-  pkg_deps = [
-    "libbrillo",
-    "libchrome",
-    "libdrm",
-    "libec",
-    "libmojo",
-  ]
-}
-
 source_set("libexecutor_delegate") {
   sources = [ "delegate_impl.cc" ]
-  configs += [ ":libexecutor_delegate_pkg_deps" ]
+  public_pkg_deps = [
+    "libchrome",
+    "libmojo",
+  ]
+  pkg_deps = [
+    "libbrillo",
+    "libec",
+  ]
+  public_deps = [ "//diagnostics/cros_healthd/mojom:delegate_mojo_bindings" ]
   deps = [
     "//diagnostics/cros_healthd/delegate/events",
     "//diagnostics/cros_healthd/delegate/fetchers",
     "//diagnostics/cros_healthd/delegate/routines",
     "//diagnostics/cros_healthd/delegate/utils",
-    "//diagnostics/cros_healthd/mojom:cros_healthd_executor_mojo_bindings",
+    "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
+    "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
 }
 
-executable("executor-delegate") {
+executable("delegate") {
+  output_name = "executor-delegate"
   sources = [ "delegate_main.cc" ]
-  configs += [ ":libexecutor_delegate_pkg_deps" ]
+  pkg_deps = [
+    "libbrillo",
+    "libchrome",
+    "libec",
+    "libmojo",
+  ]
   assert_no_deps = [
     "//diagnostics/cros_healthd:*",
     "//diagnostics/cros_healthd/event/*",
@@ -44,26 +49,17 @@ executable("executor-delegate") {
 }
 
 if (use.test) {
-  pkg_config("test_pkg_deps") {
-    pkg_deps = [
-      "libbrillo",
-      "libchrome",
-      "libchrome-test",
-      "libdrm",
-      "libec",
-      "libmojo",
-    ]
-  }
-
   source_set("test") {
     sources = [ "delegate_impl_test.cc" ]
-    configs += [
-      ":test_pkg_deps",
-      "//common-mk:test",
+    pkg_deps = [
+      "libchrome-test",
+      "libec",
     ]
     deps = [
       ":libexecutor_delegate",
-      "//diagnostics/base",
+      "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/base:test_support",
+      "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
     ]
   }
 }
