--- a/diagnostics/cros_healthd/delegate/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/routines/BUILD.gn
@@ -2,41 +2,22 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//common-mk/pkg_config.gni")
-
-pkg_config("target_default") {
-  pkg_deps = [
-    "libchrome",
-    "libmojo",
-  ]
-}
-
 source_set("routines") {
   sources = [
     "floating_point_accuracy.cc",
     "prime_number_search.cc",
   ]
-  configs += [ ":target_default" ]
-  deps = [ "//diagnostics/base" ]
+  pkg_deps = [ "libchrome" ]
 }
 
 if (use.test) {
-  pkg_config("target_test") {
-    pkg_deps = [
-      "libchrome",
-      "libchrome-test",
-    ]
-  }
-
   source_set("test") {
     sources = [
       "floating_point_accuracy_test.cc",
       "prime_number_search_test.cc",
     ]
-    configs += [ ":target_test" ]
     deps = [
       ":routines",
-      "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
     ]
   }
