--- a/diagnostics/cros_healthd/delegate/utils/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/utils/BUILD.gn
@@ -2,21 +2,6 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//common-mk/pkg_config.gni")
-
-pkg_config("deps") {
-  pkg_deps = [
-    "libbrillo",
-    "libchrome",
-    "libdrm",
-    "libmojo",
-  ]
-}
-
-pkg_config("pub_deps") {
-  pkg_deps = [ "libevdev" ]
-}
-
 source_set("utils") {
   sources = [
     "display_utils.cc",
@@ -25,36 +10,33 @@ source_set("utils") {
     "libevdev_wrapper_impl.cc",
     "psr_cmd.cc",
   ]
-  configs += [ ":deps" ]
-  public_configs = [ ":pub_deps" ]
-  deps = [
-    "//diagnostics/base",
-    "//diagnostics/cros_healthd/mojom:cros_healthd_executor_mojo_bindings",
+  public_pkg_deps = [
+    "libchrome",
+    "libdrm",
+    "libevdev",
+    "libmojo",
   ]
+  public_deps = [ "//diagnostics/mojom/public:libcros_healthd_mojo_bindings" ]
+  deps = [ "//diagnostics/base" ]
 }
 
 if (use.test) {
-  pkg_config("test_pkg_deps") {
-    pkg_deps = [
-      "libbrillo",
-      "libchrome",
-      "libchrome-test",
-    ]
-  }
-
   source_set("test") {
     sources = [
       "edid_test.cc",
       "evdev_utils_test.cc",
       "psr_cmd_test.cc",
     ]
-    configs += [
-      ":test_pkg_deps",
-      "//common-mk:test",
+    pkg_deps = [
+      "libchrome",
+      "libchrome-test",
+      "libevdev",
     ]
     deps = [
       ":utils",
-      "//diagnostics/base",
+      "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/base:test_support",
+      "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
     ]
   }
 }
