--- a/diagnostics/cros_healthd/mojom/BUILD.gn
+++ b/diagnostics/cros_healthd/mojom/BUILD.gn
@@ -4,13 +4,31 @@
 
 import("//common-mk/mojom_bindings_generator.gni")
 
-generate_mojom_bindings("cros_healthd_executor_mojo_bindings") {
-  mojo_root = "${platform2_root}"
-  sources = [
-    "delegate.mojom",
-    "executor.mojom",
-  ]
+group("cros_healthd_executor_mojo_bindings") {
   deps = [
+    ":delegate_mojo_bindings",
+    ":executor_mojo_bindings",
+  ]
+}
+
+generate_mojom_bindings("executor_mojo_bindings") {
+  mojo_root = "${platform2_root}"
+  sources = [ "executor.mojom" ]
+  deps = [
+    "//diagnostics/mojom/external:libmojo_base",
+    "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
+  ]
+  mojo_extra_args = [
+    "--typemap",
+    rebase_path("//diagnostics/mojom/external/type_mappings.json"),
+  ]
+}
+
+generate_mojom_bindings("delegate_mojo_bindings") {
+  mojo_root = "${platform2_root}"
+  sources = [ "delegate.mojom" ]
+  deps = [
+    ":executor_mojo_bindings",
     "//diagnostics/mojom/external:libmojo_base",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
